...
        android:layout_width="240dp"
        android:layout_height="wrap_content"

        android:layout_marginBottom="4dp"
        android:hint="@string/confirmPassword"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordLayout">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmRegisterPasswordEditText"
            android:inputType="textPassword"
            android:layout_width="240dp"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/poppins_light"
        android:onClick="registerUserClick"
        android:text="Register"
        android:textColor="@color/fontColorLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintStart_toStartOf="@+id/passwordLayout" />

...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registerUserNameTextField"
            android:layout_width="240dp"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
...
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@+id/confirmPasswordLayout"
        app:layout_constraintStart_toStartOf="@+id/userNameLayout">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTextField"
            android:inputType="textPassword"
            android:layout_width="240dp"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>


...
