<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.HomeActivity"
    android:background="@color/bgColor"
   >


    <Button
        android:id="@+id/refreshDataHomeButton2"
        android:layout_width="252dp"
        android:layout_height="43dp"
        android:layout_marginTop="4dp"
        android:onClick="refreshData"
        android:text="Refresh Data"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/deleteUserButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/deleteUserButton"
        android:layout_width="252dp"
        android:layout_height="43dp"
        android:layout_marginTop="47dp"
        android:layout_marginBottom="44dp"
        android:onClick="deleteUser"
        android:text="Delete your Account"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.84" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_marginBottom="250dp"
        android:gravity="center"
        app:cardBackgroundColor="@color/teal"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <!-- Card contents -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/planNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:text="create a plan!"
                android:textColor="@color/fontColorDark" />

            <Button
                android:id="@+id/createPlanButton"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:onClick="createPlan"
                android:textSize="14sp"
                app:icon="@drawable/baseline_add_black_18dp"
                app:iconSize="50dp" />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/welcomeUserNameTextView"
        android:layout_width="328dp"
        android:layout_height="51dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/poppins_bold"
        android:text="Welcome!"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="130dp"
        android:layout_height="103dp"
        android:layout_marginStart="128dp"
        android:layout_marginEnd="135dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/dyd_sponge24" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="284dp"
        android:layout_height="79dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_light"
        android:text="You can also ask your roomate to invite you to their plan!"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="231dp"
        android:layout_height="52dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="74dp"
        android:fontFamily="@font/poppins_light"
        android:text="it's nice to have you back"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeUserNameTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>