...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gui.LandingActivity">

    <Button
        android:id="@+id/toCreateAccountActivityButton"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="10dp"
        android:text="Create New Account"
...
