...
    android:background="@color/bgColor"
    android:theme="@android:style/Theme.Black.NoTitleBar"
    tools:context=".gui.LoginActivity">


    <EditText
        android:id="@+id/userNameEditTextView"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/userName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </EditText>

    <Button
        android:id="@+id/toLoginButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins_light"
        android:onClick="login"
        android:text="Login"
...
